# tts-api

./: .gitignore  LICENSE  README.md  pyproject.toml  run.cmd  run.py  run.sh
src/pwt/tts_api/: aaa.py  api.py  audio_encode.py  audio_utils.py  bbb.py  model_runner.py  model_worker.py  tag_resource_pool.py  wav_header.py  部分api.py
src/pwt/utils/: audio_utils.py  mapped_list.py  ndarray_audio_utils.py  pydantic_utils.py  tag_pool.py
tests/: test_mapped_list.py  test_tag_pool.py
