[project]
name = "pwt.tts-api"
version = "0.0.1"
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "starlette",
    "uvicorn",
    "pydantic",
    "janus",
    "lameenc",
    "dill",
]

[project.scripts]
tts-api = "pwt.tts_api.api:main"


[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=1.0.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

# TODO: 使用Subtree将util纳入项目
